REGRESSION: WebSockets no longer work in Service Workers https://bugs.webkit.org/show_bug.cgi?id=199906 <rdar://problem/53516732>

Reviewed by Geoffrey Garen.

Source/WebKit:

Use WebSocketProvider so that network calls are done in the network process.

* WebProcess/Storage/WebSWContextManagerConnection.cpp:
(WebKit::WebSWContextManagerConnection::installServiceWorker):

LayoutTests:

Fix test and make sure messages are exchanged for the test to succeed.

* http/tests/workers/service/resources/serviceworker-websocket-worker.js:
(async.doTest):


Canonical link: https://commits.webkit.org/214036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247923 268f45cc-cd09-0410-ab3c-d52691b4dbfc