LayoutTests/http/tests/workers/service/resources/serviceworker-websocket-worker.js
@@ -4,7 +4,6 @@ async function doTest(event)
         event.source.postMessage("FAIL: received unexpected message from client");
         return;
     }
-            event.source.postMessage("PASS");
 
     try {
         var webSocket = new WebSocket('ws://localhost:8880/websocket/tests/hybi/workers/resources/echo');
@@ -13,8 +12,12 @@ async function doTest(event)
             event.source.postMessage("FAIL: websocket had an error: " + e);
         };
 
-        webSocket.onopen = () => {
+        webSocket.onmessage = (e) => {
             event.source.postMessage("PASS");
+        };
+
+        webSocket.onopen = () => {
+            webSocket.send("PASS?");
         };
     } catch (e) {
         event.source.postMessage("FAIL: exception was raised: " + e);
